# posetracks

./: .gitattributes  .gitignore  README.md  __init__.py  blender_manifest.toml  build.py  callbacks.py  events.py  gen_headers.py  global_vars.py  pose_autogen_defs.py  utils.py
core/: .gitattributes  .gitignore  ArucoTest.cpp  BallTrackingTest.cpp  CMakeLists.txt  KinectTest.cpp  MEComputeLib.cpp  MEComputeLib.h  OpenCVExperimental.cpp  README.md  bezier.h  build.py  calibration_config.json  chessboard_compute.cpp  chessboard_compute.hpp  dllmain.cpp  json-patch.cpp  json-schema-draft7.json.cpp  json-uri.cpp  json-validator.cpp  me_test.cpp  pch.h  simple_threadpool.cpp  simple_threadpool.hpp  string-format-check.cpp
core/MECCTag/: me_cctag.cpp  me_cctag.hpp
core/MECore/: buildkey_asset.h  buildkey_source.cpp  me_crypto.cpp  me_crypto.hpp  me_utils.cpp  me_utils.hpp  motion_engine.cpp  motion_engine.hpp  schema_asset.h  schema_source.cpp
core/MEDNNBase/: dllmain.cpp  me_dnn_base.cpp  pch.cpp  pch.h
core/MEDNNDarknet/: me_dnn_module_darknet.cpp  pch.h
core/module/: __init__.py  __init__.pyi  crypto.pyi  data.pyi  dnn.pyi  io.pyi  threading.pyi  tracking.pyi
core/module/LICENSES/: LICENCE_Darknet.txt  LICENSE_MMDeploy.txt  LICENSE_MMPose.txt  LICENSE_ONNXRuntime.txt  LICENSE_OpenCV.txt  LICENSE_OpenMMLab.txt  LICENSE_STag.txt  README.md
core/module/cp310/: CMakeLists.txt
core/module/cp311/: CMakeLists.txt
core/module/cp39/: CMakeLists.txt
core/module/models/feature_extractors/: basic_conv_person_64.json  shufflenetv2_person_100.json
core/module/models/rtmdet/: fullbody_320.json
core/module/models/rtmdet-m/: deploy.json  detail.json  pipeline.json
core/module/models/rtmpose/: animal17-m.json  face106-m.json  face106-s.json  face106-t.json  fullbody133-l.json  fullbody133-l_double.json  fullbody133-m.json  fullbody17-l.json  fullbody17-l_double.json  fullbody17-m.json  fullbody17-m_double.json  fullbody17-s.json  fullbody17-t.json  fullbody26-l.json  fullbody26-l_double.json  fullbody26-m.json  fullbody26-m_double.json  fullbody26-s.json  fullbody26-t.json  hand21-m.json
core/module/models/rtmpose-m/: deploy.json  detail.json  pipeline.json
core/module/models/tag_detectors/: basic_reg_v1.json
core/module/models/yolox/heads/: heads_s.json
core/module/models/yolox/standard_models/: yolox_l.json  yolox_m.json  yolox_s.json
core/module/models/yolox/tags/: aruco_s.json
core/src/: CMakeLists.txt  bpy_data_impl.cpp  buildkey.cpp  me_core.cpp  me_core.hpp  me_core_simplepool.cpp  me_core_simplepool.hpp  me_core_transcoder.cpp  me_core_transcoder.hpp  me_crypto.cpp  me_crypto.hpp  me_crypto_bindings.cpp  me_dnn.cpp  me_dnn.hpp  me_dnn_base.cpp  me_dnn_bindings.cpp  me_dnn_detection_model.hpp  me_dnn_detectpose_model.cpp  me_dnn_detectpose_model.hpp  me_dnn_marker_comparator.cpp  me_dnn_marker_comparator.hpp  me_dnn_module.hpp  me_dnn_module_darknet.cpp  me_dnn_module_mmdeploy.cpp  me_dnn_module_opencv.cpp  me_dnn_pose_model.cpp  me_dnn_pose_model.hpp  me_dnn_rtdetection_model.cpp  me_dnn_rtdetection_model.hpp  me_pose_test.cpp  me_python.cpp  me_utils.cpp  me_utils.hpp  me_utils_bindings.cpp  python.cpp  testing.cpp
core/src/me/crypto/: sha1.cpp  sha1.hpp
core/src/me/data/: bezier.cpp  bezier.hpp  curve.cpp  curve.hpp  graph.hpp  hermite.cpp  hermite.hpp  memory.cpp  memory.hpp  range.cpp  range.hpp  stats.cpp  stats.hpp
core/src/me/dnn/: CMakeLists.txt  cv_tag_detector.cpp  cv_tag_detector.hpp  dnn.cpp  dnn.hpp  feature_extractor.cpp  feature_extractor.hpp  marker_comparator.cpp  marker_comparator.hpp  models.cpp  models.hpp  pose_topdown.cpp  pose_topdown.hpp  rtmdet.cpp  rtmdet.hpp  rtmpose.cpp  rtmpose.hpp  tag_net.cpp  tag_net.hpp  tag_net_dynamic.cpp  yolox.cpp  yolox.hpp
core/src/me/io/: CMakeLists.txt  frameprovider.cpp  frameprovider.hpp  imagelist.cpp  imagelist.hpp  transcoder.cpp  transcoder.hpp
core/src/me/threading/: CMakeLists.txt  simplepool.cpp  simplepool.hpp
core/src/me/tracking/: CMakeLists.txt  camera.cpp  camera.hpp  data.cpp  data.hpp  filters.hpp  triangulation.cpp  triangulation.hpp
core/src/modules/blender/: CMakeLists.txt  bpy_data.hpp  bpy_ops.cpp  bpy_ops.hpp  bpy_types.cpp  bpy_types.hpp  bpy_utils.cpp  bpy_utils.hpp  mat_types.hpp
core/src/modules/crypto/: sha1.cpp  sha1.hpp
core/src/modules/data/: bezier.cpp  bezier.hpp  curve.cpp  curve.hpp  graph.hpp  hermite.cpp  hermite.hpp  memory.cpp  memory.hpp  range.cpp  range.hpp  stats.cpp  stats.hpp
core/src/modules/dnn/: CMakeLists.txt  cv_tag_detector.cpp  cv_tag_detector.hpp  dnn.cpp  dnn.hpp  feature_extractor.cpp  feature_extractor.hpp  models.cpp  models.hpp  pose_topdown.cpp  pose_topdown.hpp  rtmdet.cpp  rtmdet.hpp  rtmpose.cpp  rtmpose.hpp  tag_net.cpp  tag_net.hpp  tag_net_dynamic.cpp  yolox.cpp  yolox.hpp
core/src/modules/io/: frameprovider.cpp  frameprovider.hpp  imagelist.cpp  imagelist.hpp  transcoder.cpp  transcoder.hpp
core/src/modules/threading/: simplepool.cpp  simplepool.hpp
core/src/modules/tracking/: camera.cpp  camera.hpp  data.cpp  data.hpp  filters.cpp  filters.hpp  triangulation.cpp  triangulation.hpp
operators/: __init__.py  armature_generator.py  calculate_statistics.py  clear_all_tracks.py  clear_temp_tracks.py  create_tracks.py  detect_objects.py  detect_poses.py  detect_tags.py  event_ops.py  filter_fcurves.py  filter_tracks.py  filters.py  model_load.py  pose_estimation.py  prune_data.py  report_status.py  rigging_constraints.py  solve_cameras.py  track_management.py  triangulate_points.py
property_groups/: __init__.py  me_data.py  me_stats.py  me_ui.py  ui_props.py
ui/: __init__.py
ui/lists/: __init__.py  pose_list.py
ui/menus/: __init__.py  graph_editor.py  view_3d.py
ui/panels/: __init__.py  model_manager.py  object_detection.py  pose_estimation.py  rigging.py  tag_detection.py  track_manager.py  triangulation.py  view_3d.py
